--- a/src/app/features/users/user-form/user-form.component.scss
+++ b/src/app/features/users/user-form/user-form.component.scss
@@ -3,6 +3,7 @@ form {
   flex-direction: column;
   gap: 1rem;
   max-width: 500px;
+  margin: 0 auto;
 }
 
 .actions {
